internal/gatewayapi/testdata/backendtrafficpolicy-with-healthcheck-overrides.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
services:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: default
    name: http-backend
  spec:
    ports:
    - port: 8080
      name: http
      protocol: TCP
- apiVersion: v1
  kind: Service
  metadata:
    namespace: default
    name: grpc-backend
  spec:
    ports:
    - port: 50051
      name: grpc
      protocol: TCP
endpointSlices:
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-http-backend
    namespace: default
    labels:
      kubernetes.io/service-name: http-backend
  addressType: IPv4
  ports:
  - name: http
    protocol: TCP
    port: 8080
  endpoints:
  - addresses:
    - 7.7.7.7
    conditions:
      ready: true
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-grpc-backend
    namespace: default
    labels:
      kubernetes.io/service-name: grpc-backend
  addressType: IPv4
  ports:
  - name: grpc
    protocol: TCP
    port: 50051
  endpoints:
  - addresses:
    - 8.8.8.8
    conditions:
      ready: true
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-with-overrides
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/with-overrides"
      backendRefs:
      - name: http-backend
        port: 8080
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-with-no-overrides
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/with-no-overrides"
      backendRefs:
      - name: http-backend
        port: 8080
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    namespace: default
    name: grpcroute-with-overrides
  spec:
    hostnames:
    - grpc-with-overrides.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: grpc-backend
        port: 50051
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    namespace: default
    name: grpcroute-with-no-overrides
  spec:
    hostnames:
    - grpc-with-no-overrides.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: grpc-backend
        port: 50051
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: default
    name: policy-for-httproute-with-overrides
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-with-overrides
    healthCheck:
      active:
        timeout: "1s"
        interval: "5s"
        healthyThreshold: 1
        unhealthyThreshold: 3
        type: HTTP
        http:
          path: "/healthz"
          method: "GET"
        overrides:
          port: 9090
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: default
    name: policy-for-httproute-with-no-overrides
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-with-no-overrides
    healthCheck:
      active:
        timeout: "1s"
        interval: "5s"
        healthyThreshold: 1
        unhealthyThreshold: 3
        type: HTTP
        http:
          path: "/healthz"
          method: "GET"
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: default
    name: policy-for-grpcroute-with-overrides
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: GRPCRoute
      name: grpcroute-with-overrides
    healthCheck:
      active:
        timeout: "1s"
        interval: "5s"
        healthyThreshold: 1
        unhealthyThreshold: 3
        type: GRPC
        grpc:
          service: foo-service
        overrides:
          port: 50052
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: default
    name: policy-for-grpcroute-with-no-overrides
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: GRPCRoute
      name: grpcroute-with-no-overrides
    healthCheck:
      active:
        timeout: "1s"
        interval: "5s"
        healthyThreshold: 1
        unhealthyThreshold: 3
        type: GRPC
        grpc:
          service: bar-service
