internal/gatewayapi/testdata/backendtrafficpolicy-with-healthcheck-overrides.out.yaml
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    name: policy-for-httproute-with-overrides
    namespace: default
  spec:
    healthCheck:
      active:
        healthyThreshold: 1
        http:
          method: GET
          path: /healthz
        interval: 5s
        overrides:
          port: 9090
        timeout: 1s
        type: HTTP
        unhealthyThreshold: 3
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-with-overrides
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    name: policy-for-httproute-with-no-overrides
    namespace: default
  spec:
    healthCheck:
      active:
        healthyThreshold: 1
        http:
          method: GET
          path: /healthz
        interval: 5s
        timeout: 1s
        type: HTTP
        unhealthyThreshold: 3
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-with-no-overrides
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    name: policy-for-grpcroute-with-overrides
    namespace: default
  spec:
    healthCheck:
      active:
        grpc:
          service: foo-service
        healthyThreshold: 1
        interval: 5s
        overrides:
          port: 50052
        timeout: 1s
        type: GRPC
        unhealthyThreshold: 3
    targetRef:
      group: gateway.networking.k8s.io
      kind: GRPCRoute
      name: grpcroute-with-overrides
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    name: policy-for-grpcroute-with-no-overrides
    namespace: default
  spec:
    healthCheck:
      active:
        grpc:
          service: bar-service
        healthyThreshold: 1
        interval: 5s
        timeout: 1s
        type: GRPC
        unhealthyThreshold: 3
    targetRef:
      group: gateway.networking.k8s.io
      kind: GRPCRoute
      name: grpcroute-with-no-overrides
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 4
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    name: grpcroute-with-overrides
    namespace: default
  spec:
    hostnames:
    - grpc-with-overrides.envoyproxy.io
    parentRefs:
    - name: gateway
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: grpc-backend
        port: 50051
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    name: grpcroute-with-no-overrides
    namespace: default
  spec:
    hostnames:
    - grpc-with-no-overrides.envoyproxy.io
    parentRefs:
    - name: gateway
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: grpc-backend
        port: 50051
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway
        namespace: envoy-gateway
        sectionName: http
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-with-overrides
    namespace: default
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - name: gateway
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: http-backend
        port: 8080
      matches:
      - path:
          value: /with-overrides
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-with-no-overrides
    namespace: default
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - name: gateway
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: http-backend
        port: 8080
      matches:
      - path:
          value: /with-no-overrides
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway:
    proxy:
      listeners:
      - name: envoy-gateway/gateway/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-966d2c13
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-966d2c13
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      grpc:
        enableGRPCStats: true
        enableGRPCWeb: true
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-with-no-overrides
            namespace: default
          name: httproute/default/httproute-with-no-overrides/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: http-backend
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-with-no-overrides/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: gateway.envoyproxy.io
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-with-no-overrides
          namespace: default
          policies:
          - kind: BackendTrafficPolicy
            name: policy-for-httproute-with-no-overrides
            namespace: default
        name: httproute/default/httproute-with-no-overrides/rule/0/match/0/gateway_envoyproxy_io
        pathMatch:
          distinct: false
          name: ""
          prefix: /with-no-overrides
        traffic:
          healthCheck:
            active:
              healthyThreshold: 1
              http:
                expectedStatuses:
                - 200
                host: ""
                method: GET
                path: /healthz
              interval: 5s
              timeout: 1s
              unhealthyThreshold: 3
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-with-overrides
            namespace: default
          name: httproute/default/httproute-with-overrides/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: http-backend
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-with-overrides/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: gateway.envoyproxy.io
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-with-overrides
          namespace: default
          policies:
          - kind: BackendTrafficPolicy
            name: policy-for-httproute-with-overrides
            namespace: default
        name: httproute/default/httproute-with-overrides/rule/0/match/0/gateway_envoyproxy_io
        pathMatch:
          distinct: false
          name: ""
          prefix: /with-overrides
        traffic:
          healthCheck:
            active:
              healthyThreshold: 1
              http:
                expectedStatuses:
                - 200
                host: ""
                method: GET
                path: /healthz
              interval: 5s
              overrides:
                port: 9090
              timeout: 1s
              unhealthyThreshold: 3
      - destination:
          metadata:
            kind: GRPCRoute
            name: grpcroute-with-overrides
            namespace: default
          name: grpcroute/default/grpcroute-with-overrides/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 8.8.8.8
              port: 50051
            metadata:
              kind: Service
              name: grpc-backend
              namespace: default
              sectionName: "50051"
            name: grpcroute/default/grpcroute-with-overrides/rule/0/backend/0
            protocol: GRPC
            weight: 1
        hostname: grpc-with-overrides.envoyproxy.io
        isHTTP2: true
        metadata:
          kind: GRPCRoute
          name: grpcroute-with-overrides
          namespace: default
          policies:
          - kind: BackendTrafficPolicy
            name: policy-for-grpcroute-with-overrides
            namespace: default
        name: grpcroute/default/grpcroute-with-overrides/rule/0/match/-1/grpc-with-overrides_envoyproxy_io
        traffic:
          healthCheck:
            active:
              grpc:
                service: foo-service
              healthyThreshold: 1
              interval: 5s
              overrides:
                port: 50052
              timeout: 1s
              unhealthyThreshold: 3
      - destination:
          metadata:
            kind: GRPCRoute
            name: grpcroute-with-no-overrides
            namespace: default
          name: grpcroute/default/grpcroute-with-no-overrides/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 8.8.8.8
              port: 50051
            metadata:
              kind: Service
              name: grpc-backend
              namespace: default
              sectionName: "50051"
            name: grpcroute/default/grpcroute-with-no-overrides/rule/0/backend/0
            protocol: GRPC
            weight: 1
        hostname: grpc-with-no-overrides.envoyproxy.io
        isHTTP2: true
        metadata:
          kind: GRPCRoute
          name: grpcroute-with-no-overrides
          namespace: default
          policies:
          - kind: BackendTrafficPolicy
            name: policy-for-grpcroute-with-no-overrides
            namespace: default
        name: grpcroute/default/grpcroute-with-no-overrides/rule/0/match/-1/grpc-with-no-overrides_envoyproxy_io
        traffic:
          healthCheck:
            active:
              grpc:
                service: bar-service
              healthyThreshold: 1
              interval: 5s
              timeout: 1s
              unhealthyThreshold: 3
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
